BUILD SCRIPT ONLY: updated to clarify the required permissions